# CoveragePlanning

./: .env  .gitignore  LICENSE  README.md  docker-compose.yaml
.devcontainer/: devcontainer.json  docker-compose.yml  initialize-host.sh  post-create.sh  post-start.sh
.github/workflows/: docker.yml  multiarch.yml
docker/: Dockerfile  entrypoint.sh  install-chromium.sh  install-groot2.sh  install-ortools.sh  verify-ortools-build.sh
docs/: ALGORITHM.md  README.md  SEQUENCING_AND_SEGMENTS.md  TECHNICAL_REFERENCE.md  build-docs.sh  generate_diagram_pdfs.py  generate_doc_pdfs.py  verify-docs.sh
docs/diagrams/: mission_flow_sequence.mmd  software_architecture.mmd
docs/diagrams/algorithms/: execute_job.mmd  mission_loop.mmd  perception_pipeline.mmd  recompute_schedule.mmd  segment_split.mmd
gpr_bringup/: CMakeLists.txt  README.md  package.xml
gpr_bringup/config/: gpr_coverage.yaml  nav2_gpr_params.yaml
gpr_bringup/launch/: gpr_coverage.launch.py  gz_sim.launch.py  nav2_gpr.launch.py  turtlebot_spawner.launch.py
gpr_bringup/rviz/: gpr_scan.rviz
gpr_bringup/worlds/: gpr_scan.sdf.xacro  gpr_scan_polygon.sdf.xacro
gpr_common/: CMakeLists.txt  package.xml
gpr_common/include/gpr_common/: coverage_types.hpp  grid_map.hpp  polygon_geometry.hpp  scan_region.hpp  swath_coverage.hpp  types.hpp
gpr_common/src/: coverage_types.cpp  grid_map.cpp  polygon_geometry.cpp  scan_region.cpp  swath_coverage.cpp
gpr_common/test/: test_gpr_common.cpp  test_polygon_geometry.cpp  test_swath_coverage.cpp
gpr_control/: CMakeLists.txt  package.xml
gpr_control/include/gpr_control/: control_bridge.hpp  i_path_tracker.hpp  nav2_follow_path_tracker.hpp  ros_conversions.hpp
gpr_control/src/: control_bridge.cpp  nav2_follow_path_tracker.cpp  ros_conversions.cpp
gpr_metrics/: CMakeLists.txt  package.xml
gpr_metrics/include/gpr_metrics/: coverage_accountant.hpp  coverage_baseline.hpp  coverage_metrics.hpp  coverage_reporter.hpp  metrics_config.hpp  uncovered_region.hpp
gpr_metrics/src/: coverage_accountant.cpp  coverage_baseline.cpp  coverage_reporter.cpp
gpr_metrics/test/: test_coverage_accountant.cpp
gpr_mission/: CMakeLists.txt  package.xml
gpr_mission/bt_xml/: coverage_mission.xml
gpr_mission/include/gpr_mission/: coverage_stack.hpp  mission_behaviors.hpp  mission_context.hpp  mission_context_access.hpp  mission_context_provider.hpp  planning_job_utils.hpp
gpr_mission/src/: coverage_stack.cpp  gpr_mission_node.cpp  mission_behaviors.cpp  mission_context.cpp  planning_job_utils.cpp
gpr_msgs/: CMakeLists.txt  package.xml
gpr_msgs/msg/: CoverageJob.msg  CoverageReport.msg  CoverageSegment.msg  Schedule.msg  UncoveredRegion.msg
gpr_perception/: CMakeLists.txt  package.xml
gpr_perception/include/gpr_perception/: occupancy_grid_mapper.hpp  perception_bridge.hpp  perception_pipeline.hpp  ros_conversions.hpp
gpr_perception/src/: occupancy_grid_mapper.cpp  perception_bridge.cpp  perception_pipeline.cpp  ros_conversions.cpp
gpr_perception/test/: test_occupancy_grid_mapper.cpp
gpr_planning/: CMakeLists.txt  package.xml
gpr_planning/cmake/: gpr_planning-extras.cmake
gpr_planning/include/gpr_planning/: astar_grid_planner.hpp  boustrophedon_planner.hpp  boustrophedon_sequencer.hpp  coverage_report_conversions.hpp  heuristic_atsp_solver.hpp  i_sequence_solver.hpp  oarp_lite_planner.hpp  or_tools_atsp_solver.hpp  path_invalidator.hpp  planning_engine.hpp  planning_log.hpp  planning_ops.hpp  planning_snapshot.hpp  planning_worker.hpp  ros_io_facade.hpp  segment_catalog.hpp  sequence_solver_utils.hpp
gpr_planning/src/: astar_grid_planner.cpp  boustrophedon_planner.cpp  boustrophedon_sequencer.cpp  coverage_report_conversions.cpp  create_sequence_solver.cpp  heuristic_atsp_solver.cpp  oarp_lite_planner.cpp  or_tools_atsp_solver.cpp  path_invalidator.cpp  planning_engine.cpp  planning_ops.cpp  planning_worker.cpp  ros_io_facade.cpp  segment_catalog.cpp  sequence_solver_utils.cpp
gpr_planning/test/: test_boustrophedon_planner.cpp  test_boustrophedon_sequencer.cpp  test_executed_trajectory.cpp  test_oarp_lite_planner.cpp  test_path_invalidator.cpp  test_planning_engine_sequencer.cpp  test_segment_catalog.cpp
scripts/: verify-cross-platform.sh
