<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gpr_mission</name>
  <version>0.1.0</version>
  <description>Behavior-tree mission manager for GPR coverage.</description>
  <maintainer email="sahrudaypatti@gmail.com">Sahruday Patti</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gpr_common</depend>
  <depend>gpr_metrics</depend>
  <depend>gpr_perception</depend>
  <depend>gpr_planning</depend>
  <depend>gpr_control</depend>
  <depend>gpr_msgs</depend>
  <depend>rclcpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cpplint</test_depend>
  <test_depend>ament_cppcheck</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
